<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">海豚小说</string>
    <string name="app_name_test">南瓜小说</string>
    <string name="txt_company_culture_literature">海豚文化传媒</string>
    <string name="txt_share_title">海量小说，阅读就用“海豚小说”小说</string>
    <string name="txt_share_content">新用户下载登录领红包，阅读得嗨币，红包嗨币可提现，邀请你也来！</string>
    <string name="rule_id_card_Num">0123456789Xx</string>
    <string name="loading">加载中&#8230;</string>
    <string name="txt_network_maybe_exceptions">服务器连接可能存在异常&#8230;</string>
    <string name="txt_logon_failure">登录失效，请重新登录！</string>
    <string name="txt_error_qr">错误二维码，请重新扫描！</string>
    <string name="txt_error_pic">该图片无法识别二维码</string>
    <string name="text_point_out_once_again">再次点击退出程序哟~</string>
    <string name="txt_welcome_back_net">欢迎回到 没网会死 星球！</string>
    <string name="txt_radio_wave_connection_interruption">电波连接中断了T.T</string>
    <string name="txt_network_error">网络连接不可用</string>
    <string name="txt_no_network_try_again_later">我们检测到您的网络异常，请稍后重试</string>
    <string name="txt_network_setting">网络设置</string>
    <string name="txt_reconnection">重新连接</string>
    <string name="txt_plz_select_a_pic">请选择一张图片</string>
    <string name="txt_say_hi">Hi尊敬的用户</string>
    <string name="txt_login_success">登录成功</string>
    <string name="txt_binding_cellphone_hint">您当前没有绑定手机号，要前往绑定吗？</string>
    <string name="txt_go2_binding">去绑定</string>
    <string name="txt_withhold">暂不</string>
    <string name="txt_permanent_validity">永久</string>
    <string name="txt_sms_verification_code_has_been_issued">短信验证码已下发</string>
    <string name="network_error">当前无网络</string>
    <string name="notify_no_network">网络连接不可用，请稍后重试！</string>
    <string name="esky_service_exception">网络不给力，请稍候重试！</string>
    <string name="time_out_please_try_again_later">连接超时,请稍后再试</string>
    <string name="txt_anonymity">佚名</string>
    <string name="txt_develop_more_filters">展开更多筛选</string>
    <string name="tips_copy_success">复制成功，快去分享吧！</string>
    <string name="txt_login_expired">登录已过期</string>
    <string name="txt_plz_log_in_again">请重新登录</string>
    <string name="txt_opening">正在打开&#8230;</string>
    <string name="txt_plz_select_withdrawal_money">请选择提现金额！</string>
    <string name="hint_modify_success">修改成功！</string>
    <string name="txt_books_do_not_exist">抱歉，书籍不存在！</string>
    <string name="txt_id_colon">ID：</string>
    <string name="txt_account_colon">账号：</string>
    <string name="txt_no_data">暂无数据</string>
    <string name="txt_skip_x">跳过 | %1$d</string>
    <string name="txt_score_zero">0.0</string>
    <string name="txt_zero_f2">0.00</string>
    <string name="txt_zero">0</string>
    <string name="txt_zero_min">0min</string>
    <string name="txt_default">--</string>
    <string name="txt_not_available">暂无</string>
    <string name="txt_all">全部</string>
    <string name="txt_female">女生</string>
    <string name="txt_male">男生</string>
    <string name="hint_select_your_gender">请选择您的性别\n我们将为您推荐精彩书籍！</string>
    <string name="txt_unbind">未绑定</string>
    <string name="txt_has_been_bind">已绑定</string>
    <string name="txt_bind_bankcard">绑定银行卡</string>
    <string name="txt_submit_2_bind">提交绑定</string>
    <string name="txt_your_friend">您的好友</string>
    <string name="txt_done">取消</string>
    <string name="txt_select_all">全选</string>
    <string name="txt_select_all_cancel">取消全选</string>
    <string name="txt_delete_x">删除（%1$d）</string>
    <string name="txt_manage">管理</string>
    <string name="txt_search">搜索</string>
    <string name="txt_plz_input_keyword">请输入关键字</string>
    <string name="txt_login">登录</string>
    <string name="txt_regist">注册</string>
    <string name="txt_third_part_login">第三方账号登录</string>
    <string name="txt_wechat_login">微信登录</string>
    <string name="txt_get_verification_code">获取验证码</string>
    <string name="txt_plz_input_phone_number">请输入用户名</string>
    <string name="txt_plz_input_new_phone_number">请输入新的手机号</string>
    <string name="txt_plz_input_verification_code">请输入验证码</string>
    <string name="txt_plz_input_password">请输入密码</string>
    <string name="txt_plz_comfirm_password">请确认密码</string>
    <string name="txt_plz_verification_password">两次密码不一致</string>
    <string name="txt_agree_login_agreement">登录代表您同意海豚小说《用户协议》和《隐私策略》</string>
    <string name="txt_foxread_user_and_privacy_policy">海豚小说《用户协议》和《用户隐私》</string>
    <string name="txt_plz_input_invitation_code">请输入邀请码（非必填）</string>
    <string name="txt_confirm_2_submit">确定提交</string>
    <string name="txt_invitation_code">邀请码</string>
    <string name="txt_recommend">推荐</string>
    <string name="txt_day_x">第%1$d天</string>
    <string name="txt_recommend_a_good_book_x">推荐一本好书《%1$s》</string>
    <string name="txt_today">今天</string>
    <string name="txt_explain">说明</string>
    <string name="txt_got_it">知道了</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_confirm_2_pay">确认支付</string>
    <string name="txt_payment_dialog_title">支付方式</string>
    <string name="txt_plz_select_payment_way">请选择支付方式</string>
    <string name="txt_need_2_pay">需支付：%1$s</string>
    <string name="txt_need_3_pay">需支付：%1$s</string>
    <string name="txt_need_4_pay">需支付：%1$s</string>
    <string name="txt_reduction_pay">点我，立减%1$s</string>
    <string name="txt_added_hpoint">点我，额外赠送%1$s</string>
    <string name="txt_user_cdkey">使用卡密支付，额外赠送%1$s</string>
    <string name="txt_describe_cdkey">%1$s+额外%2$s</string>
    <string name="unit_ren">人</string>
    <string name="unit_ren_w">万人</string>
    <string name="unit_yuan">元</string>
    <string name="unit_score">分</string>
    <string name="unit_w">万</string>
    <string name="unit_word">字</string>
    <string name="unit_word_w">万字</string>
    <string name="txt_chapter_x">第%1$d章&#8211;%2$s</string>
    <string name="txt_total_chapter_x">共%1$d章</string>
    <string name="txt_category_dt_sub_title">%1$s类全网%2$s前三名</string>
    <string name="txt_tips_classify">精准找书导航页</string>
    <string name="txt_tips_rank_list">必读好书推荐</string>
    <string name="txt_tips_newbook">好书抢先看</string>
    <string name="txt_tips_freebook">月限免好书</string>
    <string name="txt_original_text">作者原创  即将上线</string>
    <string name="txt_must_read">必读榜</string>
    <string name="txt_free_book">免费</string>
    <string name="txt_all_classify">全部分类</string>
    <string name="txt_classify">分类</string>
    <string name="stxt_ranking_list">排行榜</string>
    <string name="txt_new_book">新书</string>
    <string name="txt_original">原创</string>
    <string name="txt_end">完结</string>
    <string name="txt_serialize">连载</string>
    <string name="txt_update">更新</string>
    <string name="txt_unshelve">已下架</string>
    <string name="txt_hotlist_today">今日大热榜</string>
    <string name="txt_the_full_list">完整榜单</string>
    <string name="txt_classify_excellent_works">分类佳作</string>
    <string name="txt_more_classify">更多分类</string>
    <string name="txt_special_topic">专题</string>
    <string name="txt_more">更多</string>
    <string name="txt_get_changed">换一换</string>
    <string name="txt_actual_time_top_search">实时热搜</string>
    <string name="txt_good_book_on_all_over_the_web">全网都在搜的好书</string>
    <string name="txt_the_most_understand_you_recommended_daily">最懂你的每日推荐</string>
    <string name="txt_exclusive">独家</string>
    <string name="txt_quality">品质</string>
    <string name="txt_fiery">火热</string>
    <string name="txt_classics">经典</string>
    <string name="txt_positive_energy">正能量</string>
    <string name="txt_high_score">高分</string>
    <string name="txt_search_count_x">实搜%1$s次</string>
    <string name="txt_new_books_lead_up">新书抢先</string>
    <string name="txt_high_score_well_chosen">高分精选</string>
    <string name="txt_title_exclusive_recommend">全网独家，重磅推荐</string>
    <string name="txt_carefully_selected_4_you">为您精心挑选</string>
    <string name="txt_all_boys_love">男生都喜欢</string>
    <string name="txt_all_girls_love">女生都喜欢</string>
    <string name="txt_praise_good_books">好评佳作</string>
    <string name="txt_total_reading_time_min">今日已阅读(分钟)</string>
    <string name="txt_sign_in_for_gold">签到领嗨币</string>
    <string name="txt_markread_chapter_x">读到：%1$s</string>
    <string name="txt_markread_null">未读</string>
    <string name="txt_welfare_center">福利中心</string>
    <string name="txt_click_2_login">点击\n登录</string>
    <string name="txt_gold_coin_usable">可用嗨币</string>
    <string name="hint_not_logged_in">还未登录账号哦</string>
    <string name="hint_login_2_get_welfare">登录领取海量福利！</string>
    <string name="txt_sign_in_immediately">立即签到</string>
    <string name="txt_already_sign_in">已经签到</string>
    <string name="txt_already_received">已领取</string>
    <string name="txt_already_run_out">已领完</string>
    <string name="txt_go2_received">去领取</string>
    <string name="txt_friend_reading_time_x">好友阅读%1$d分钟</string>
    <string name="txt_go2_fill_in">去填写</string>
    <string name="txt_go2_invite">去邀请</string>
    <string name="txt_go2_reading">去阅读</string>
    <string name="txt_go2_watch">去观看</string>
    <string name="txt_can_receive">可领取</string>
    <string name="txt_complete">完成</string>
    <string name="txt_completed">已完成</string>
    <string name="txt_newbie_mission">新手任务</string>
    <string name="txt_reading_now">立即阅读</string>
    <string name="txt_2_fill_in">去填写</string>
    <string name="txt_2_binding">去绑定</string>
    <string name="txt_withdrawal_1_yuan">提现1元</string>
    <string name="txt_input_red_packet_code">输入红包码</string>
    <string name="txt_binding_cellphone_number">绑定手机号</string>
    <string name="txt_daily_mission">日常任务</string>
    <string name="txt_invite_friends">邀请好友</string>
    <string name="txt_business_cooperation">商务合作</string>
    <string name="txt_email">建议反馈</string>
    <string name="txt_fans_base">Telegram官方群</string>
    <string name="txt_go2_invite_friends">去邀请</string>
    <string name="txt_reading_mission">阅读任务</string>
    <string name="txt_cdkey_tips">请输入卡密</string>
    <string name="txt_cdkey_order">兑换历史</string>
    <string name="txt_cdkey_query">卡密查询</string>
    <string name="txt_exchange_cdkey">兑换</string>
    <string name="txt_cdkey_prompt">实用须知：</string>
    <string name="txt_cdkey_prompt_1">1、商品串码获取：购买成功后，进入app首页-我的-卡密兑换-查询卡密；</string>
    <string name="txt_cdkey_prompt_2">2、商品串码实用；复制商品串码-进入app首页-我的-卡密兑换-长按粘贴串码-立即兑换-兑换中-兑换成功；</string>
    <string name="txt_cdkey_prompt_3">3、温馨提示：因商品为虚拟商品，请保护号您购买的商品串码，以防流失，因发送给他人等情况，导致串码被他人兑换，不支持找回与退款。</string>
    <string name="txt_cdkey_prompt_4">4、如有疑问：可联系telegram客服@haitunxiaoshuo进行咨询或者关注海豚小说官方推特进行留言。"</string>
    <string name="txt_basic_info">基本信息</string>
    <string name="txt_account_security">账号与安全</string>
    <string name="txt_night_mode">夜间模式</string>
    <string name="txt_reader_settings">阅读设置</string>
    <string name="txt_push_notification">推送通知</string>
    <string name="txt_have_been_opened">已开启</string>
    <string name="txt_clear_cache">清理缓存</string>
    <string name="txt_about_us">关于我们</string>
    <string name="txt_logout_account">退出账号</string>
    <string name="txt_user_agreement_and_privacy_policy_prompt">用户协议与隐私政策提示</string>
    <string name="txt_agreement_policy_entrance">您可以阅读完整的《海豚小说用户使用协议》和《海豚小说隐私政策》来了解详细信息。</string>
    <string name="txt_agreement_and_policy_abstract">感谢您信任并使用“海豚小说”。
        \n\u3000\u3000请您务必审慎阅读、充分理解“用户协议”和“隐私政策”各项条款，包括但不限于：为使用广西狐狸文化传媒有限公司提供的海豚小说服务，我们需要收集您的设备信息、操作日志等个人信息。您可以在“设置”中查看、变更、删除个人信息并管理您的授权。
        \n\u3000\u3000如您同意，请点击“同意并继续”开始接受我们的服务。</string>
    <string name="txt_service_unavailable">您需要同意用户协议与隐私政策后才能使用“海豚小说”。\n如您不同意，很遗憾我们无法为你提供服务。</string>
    <string name="txt_disagree">不同意</string>
    <string name="txt_disagree_and_exit">不同意并退出</string>
    <string name="txt_agree_and_continue">同意并继续</string>
    <string name="txt_adblock_plus_success">成功去除广告！</string>
    <string name="txt_adblock_plus_tips_x">现在起%1$d分钟内，您可享受阅读器内免广告阅读。</string>
    <string name="txt_residue_degree_today_x">今日还有%1$d次机会</string>
</resources>