<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/tv_adv_free_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:drawableTop="@drawable/ic_hook_green_adv_free_success"
        android:drawablePadding="@dimen/dp_8"
        android:text="@string/txt_adblock_plus_success"
        android:textColor="@color/txt_black_191919"
        android:textSize="@dimen/sp_22"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/tv_reward_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/txt_adblock_plus_tips_x"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_residue_degree_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/txt_residue_degree_today_x"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/btn_complete"
        style="@style/Btn_Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_36"
        android:background="@drawable/ripple_semicircle_btn_gradual_bg_yellow"
        android:text="@string/txt_complete" />

</LinearLayout>