<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar_normal"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/ctl_cdkey_exchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/shape_round_whitebg"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_normal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_input_cdkey_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_cdkey_tips"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/col_orange_ea6b3c"
            app:endIconCheckable="true"
            app:endIconDrawable="@mipmap/ic_icon_clear_input"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cdkey_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:drawableStart="@mipmap/ic_payment_card"
                android:drawablePadding="@dimen/dp_8"
                android:inputType="text"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/txt_black_191919"
                android:textSize="@dimen/sp_14"
                app:hintTextColor="@color/txt_gray_b2" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_exchange_cdkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/ripple_normal_btn_bg_red"
            android:text="@string/txt_exchange_cdkey"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16">

            <TextView
                android:id="@+id/iv_asBtn_cdkey_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_8"
                android:padding="@dimen/dp_8"
                android:text="@string/txt_cdkey_order"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/iv_asBtn_cdkey_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:padding="@dimen/dp_8"
                android:text="@string/txt_cdkey_query"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_32"
        app:layout_constraintTop_toBottomOf="@+id/ctl_cdkey_exchange">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/txt_cdkey_prompt"
            android:textColor="@color/txt_black_191919"
            android:textSize="@dimen/sp_14"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_16"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/txt_cdkey_prompt_1"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_agree_service_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_16"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/txt_cdkey_prompt_2"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_16"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/txt_cdkey_prompt_3"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_16"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/txt_cdkey_prompt_4"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>